@@ -1,3 +1,8 @@
+2007-07-23  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual.xml:
+	  Tell about $(DOC_MODULE)-undeclared.txt.
+
 2007-07-15  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc-manual.xml:
